@@ -47,6 +47,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/plot3DProfiles.py',
                       'progs/plotCFstats.py',
                       'progs/extractProfile.py',
+                      'progs/extract3DProfile.py',
                       'progs/plotRSL.py',
 		      'progs/extractCFstats.py',
                       'progs/ran_topo.py',
